# PrivateEquityDatabase

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  YTD超额收益.xlsx  benchmark_nav.json  dashboard.html  docker-compose.yml  index.html  周度超额收益.xlsx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_all_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: router.py  schemas.py
backend/app/core/: constants.py  exceptions.py
backend/app/domains/benchmarks/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/companies/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/comparison/: router.py
backend/app/domains/funds/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/import_export/: models.py  router.py
backend/app/domains/managers/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/metrics/: models.py  router.py
backend/app/domains/nav/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/reports/: models.py  router.py
backend/scripts/: generate_excess_data.py  import_weekly_data.py  import_weekly_sqlite.py  rebuild_dashboard.py  seed_data.py  update_benchmark.py
data/: 点睛业绩放送_量化股票策略业绩榜（0105-0109).xlsx  点睛业绩放送_量化股票策略业绩榜（0112-0116).xlsx  点睛业绩放送_量化股票策略业绩榜（0119-0123).xlsx  点睛业绩放送_量化股票策略业绩榜（0126-0130).xlsx  点睛业绩放送_量化股票策略业绩榜（0202-0206).xlsx  点睛业绩放送_量化股票策略业绩榜（0209-0213).xlsx  (+17 more)
(+21 files in other folders)
